Fix an issue where the block header got a line break on smaller viewport widths

--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -12,7 +12,7 @@
   padding-right: 0;
   width: 70%;
   grid-template-rows: 30px 35px 400px 35px;
-  grid-template-columns: 1fr 3fr 105px 170px;
+  grid-template-columns: minmax(1fr, auto) 3fr 105px 170px;
   grid-template-areas:
     'block create create create'
     'card card card list'
